--- a/src/settings.json
+++ b/src/settings.json
@@ -1,1 +1,1 @@
-{"interval":15000,"limit":50,"lowLevel":-5,"highLevel":10,"count":6,"delta":0.2,"cold":40.0}
+{"interval":15000,"limit":50,"lowLevel":-5,"highLevel":10,"count":6,"delta":0.2,"cold":40.0,"steps":100,"delay":1000}
